{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 35,
  "lineage": "99efc154-ed47-5b0e-0bcb-9c95fa82ae2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:security-group/sg-02d652184e088fb50",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d652184e088fb50",
            "ingress": [],
            "name": "fintech-reconciliation-dev-ecs-20251008173757000200000002",
            "name_prefix": "fintech-reconciliation-dev-ecs-",
            "owner_id": "664882921839",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-ecs-sg",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-ecs-sg",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:security-group/sg-034a02a63976dce7e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-034a02a63976dce7e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d652184e088fb50"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "fintech-reconciliation-dev-rds-20251008173807280800000005",
            "name_prefix": "fintech-reconciliation-dev-rds-",
            "owner_id": "664882921839",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-rds-sg",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-rds-sg",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:internet-gateway/igw-0632faaf282d52da1",
            "id": "igw-0632faaf282d52da1",
            "owner_id": "664882921839",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-igw",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-igw",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:route-table/rtb-02cffe8dc8641da5e",
            "id": "rtb-02cffe8dc8641da5e",
            "owner_id": "664882921839",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-private-rt-1",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-private-rt-1",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:route-table/rtb-0c25cd69edcac236a",
            "id": "rtb-0c25cd69edcac236a",
            "owner_id": "664882921839",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0632faaf282d52da1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-public-rt",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-public-rt",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049046250d4b7324e",
            "route_table_id": "rtb-02cffe8dc8641da5e",
            "subnet_id": "subnet-09f3190cf79e7f0e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caf274e6943217d8",
            "route_table_id": "rtb-02cffe8dc8641da5e",
            "subnet_id": "subnet-01840aa5142a9ba0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e08bdeabda615d46",
            "route_table_id": "rtb-0c25cd69edcac236a",
            "subnet_id": "subnet-0031aa58217fff905"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:security-group/sg-082ba8b7eeb5717ea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082ba8b7eeb5717ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "fintech-reconciliation-dev-vpc-endpoints-20251008173757048100000003",
            "name_prefix": "fintech-reconciliation-dev-vpc-endpoints-",
            "owner_id": "664882921839",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-vpc-endpoints-sg",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-vpc-endpoints-sg",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:subnet/subnet-09f3190cf79e7f0e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f3190cf79e7f0e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "664882921839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-private-1",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-private-1",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:subnet/subnet-01840aa5142a9ba0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01840aa5142a9ba0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "664882921839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-private-2",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-private-2",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:subnet/subnet-0031aa58217fff905",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0031aa58217fff905",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "664882921839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-public-1",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-public-1",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:vpc/vpc-0c881921c13fc42cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac39616e0e92f7d8",
            "default_route_table_id": "rtb-04cad0d98627f4f07",
            "default_security_group_id": "sg-06d00e1b9e6406c88",
            "dhcp_options_id": "dopt-0390ba1e66ff3f4ce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c881921c13fc42cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04cad0d98627f4f07",
            "owner_id": "664882921839",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-vpc",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-vpc",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:vpc-endpoint/vpce-04629ffadd57dd862",
            "dns_entry": [
              {
                "dns_name": "vpce-04629ffadd57dd862-i24lh641.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04629ffadd57dd862-i24lh641-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04629ffadd57dd862-i24lh641-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09964881GRIFPJE7QN6I"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z00912843EQD3ONFV9YOT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04629ffadd57dd862",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-039b9e8b0e48126a6",
              "eni-0412df8a66cdb8c03"
            ],
            "owner_id": "664882921839",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-082ba8b7eeb5717ea"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.159",
                "subnet_id": "subnet-09f3190cf79e7f0e1"
              },
              {
                "ipv4": "10.0.2.33",
                "subnet_id": "subnet-01840aa5142a9ba0f"
              }
            ],
            "subnet_ids": [
              "subnet-01840aa5142a9ba0f",
              "subnet-09f3190cf79e7f0e1"
            ],
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-ecr-api-endpoint",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-ecr-api-endpoint",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:vpc-endpoint/vpce-0ac9eeeaa49d9c9c2",
            "dns_entry": [
              {
                "dns_name": "vpce-0ac9eeeaa49d9c9c2-1soegu0b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ac9eeeaa49d9c9c2-1soegu0b-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ac9eeeaa49d9c9c2-1soegu0b-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09870909VDSKB01AI33"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09870909VDSKB01AI33"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z00920253HFIHXODN1QLZ"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z00920253HFIHXODN1QLZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ac9eeeaa49d9c9c2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04a2bd5d4cc832edb",
              "eni-0a5653ef2c3d2011f"
            ],
            "owner_id": "664882921839",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-082ba8b7eeb5717ea"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.93",
                "subnet_id": "subnet-09f3190cf79e7f0e1"
              },
              {
                "ipv4": "10.0.2.30",
                "subnet_id": "subnet-01840aa5142a9ba0f"
              }
            ],
            "subnet_ids": [
              "subnet-01840aa5142a9ba0f",
              "subnet-09f3190cf79e7f0e1"
            ],
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-ecr-dkr-endpoint",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-ecr-dkr-endpoint",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:vpc-endpoint/vpce-0e92d87d60ba3d30f",
            "dns_entry": [
              {
                "dns_name": "vpce-0e92d87d60ba3d30f-qxscpe05.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e92d87d60ba3d30f-qxscpe05-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e92d87d60ba3d30f-qxscpe05-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0092644O714AV8WZPOH"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00930906WK4F8831WNY"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z00197697IQBA3OYVLCY"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z009199910PHC14KT02LD"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e92d87d60ba3d30f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09319425b6285fe13",
              "eni-0a3cca95ce3eefac6"
            ],
            "owner_id": "664882921839",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-082ba8b7eeb5717ea"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.46",
                "subnet_id": "subnet-09f3190cf79e7f0e1"
              },
              {
                "ipv4": "10.0.2.12",
                "subnet_id": "subnet-01840aa5142a9ba0f"
              }
            ],
            "subnet_ids": [
              "subnet-01840aa5142a9ba0f",
              "subnet-09f3190cf79e7f0e1"
            ],
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-logs-endpoint",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-logs-endpoint",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664882921839:vpc-endpoint/vpce-050232685e3b23a18",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-050232685e3b23a18",
            "owner_id": "664882921839",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02cffe8dc8641da5e"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-s3-endpoint",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "fintech-reconciliation-dev-s3-endpoint",
              "Owner": "dev-team",
              "Project": "fintech-reconciliation"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c881921c13fc42cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}